[fix] client: fix mobile layout bugs

--- a/client/assets/stylus/core/_component.styl
+++ b/client/assets/stylus/core/_component.styl
@@ -2,13 +2,13 @@
   position absolute
   top 0
   left 50%
+  width 100%
   transform translateX(-50%)
 
   .title
   .subtitle {
     color $white
     text-transform uppercase
-    font-weight bold
     letter-spacing 5px
     text-align center
   }
